<?xml version="1.0"?>
<package format="2">

  <name>mrs_mission_manager</name>
  <version>1.0.0</version>
  <description>
    mrs_mission_manager
  </description>

  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>
  <author email="spurny@fly4future.com">Vojtech Spurny</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>genmsg</depend>
  <depend>actionlib_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
