<?xml version="1.0"?>
<package format="2">

  <name>iroc_mission_handler</name>
  <version>1.0.1</version>
  <description>
    iroc_mission_handler
  </description>

  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>
  <author email="spurny@fly4future.com">Vojtech Spurny</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mrs_lib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>mrs_robot_diagnostics</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
